--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "(dropdb --if-exists  test-ts-wb-store && createdb test-ts-wb-store) && NODE_ENV=test mocha",
     "start": "nodemon app.js"
   },
   "dependencies": {
@@ -18,6 +18,9 @@
     "router": "^1.3.5"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "chai": "^4.2.0",
+    "mocha": "^8.0.1",
+    "nodemon": "^2.0.4",
+    "supertest": "^4.0.2"
   }
 }
